<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity"
    style="@style/AppTheme.RoomSelectionArea">

    <RelativeLayout android:id="@+id/inputArea"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/input_room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="140"
            android:ems="10"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:hint="@string/input_room_name_hint" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="140"
            android:ems="10"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/input_room_name"
            android:layout_marginTop="20dp"
            android:hint="@string/input_username_hint" />

        <Spinner
            android:id="@+id/combo_capturer_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_username"
            android:layout_marginTop="20dp"
            android:entries="@array/pub_capturer_resolution"
            android:prompt="@string/capturer_resolution_prompt"
            android:spinnerMode="dialog"
            android:visibility="visible"/>

        <Spinner
            android:id="@+id/combo_capturer_fps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/combo_capturer_resolution"
            android:layout_marginTop="20dp"
            android:entries="@array/pub_capturer_fps"
            android:prompt="@string/capturer_fps_prompt"
            android:spinnerMode="dialog"
            android:visibility="visible"/>

        <Button android:id="@+id/button_join_room"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/combo_capturer_fps"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/button_join_room"
            android:background="@color/white"
            android:onClick="joinRoom" />
    </RelativeLayout>

    <TextView android:id="@+id/introText"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/room_selection_intro"
        android:layout_above="@id/inputArea"
        style="@style/AppTheme.TitleText" />

    <TextView android:id="@+id/author_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/author"
        android:layout_alignParentBottom= "true"
        android:textColor="@color/white"
        android:textSize="14sp"/>

</RelativeLayout>